@@ -278,6 +278,7 @@ def run_configure(config_file):
 		("secret_key", "Secret Key"),
 		("gpg_passphrase", "Encryption password", "Encryption password is used to protect your files from reading\nby unauthorized persons while in transfer to S3"),
 		("gpg_command", "Path to GPG program"),
+		("use_https", "Use HTTPS protocol", "When using secure HTTPS protocol all communication with Amazon S3\nservers is protected from 3rd party eavesdropping. This method is\nslower than plain HTTP and can't be used if you're behind a proxy"),
 		("proxy_host", "HTTP Proxy server name", "On some networks all internet access must go through a HTTP proxy.\nTry setting it here if you can't conect to S3 directly"),
 		("proxy_port", "HTTP Proxy server port"),
 		]
@@ -297,8 +298,18 @@ def run_configure(config_file):
 			output("Refer to user manual for detailed description of all options.")
 			for option in options:
 				prompt = option[1]
+				## Option-specific handling
+				if option[0] == 'proxy_host' and getattr(cfg, 'use_https') == True:
+					setattr(cfg, option[0], "")
+					continue
+				if option[0] == 'proxy_port' and getattr(cfg, 'proxy_host') == "":
+					setattr(cfg, option[0], 0)
+					continue
+
 				try:
 					val = getattr(cfg, option[0])
+					if type(val) is bool:
+						val = val and "Yes" or "No"
 					if val not in (None, ""):
 						prompt += " [%s]" % val
 				except AttributeError:
@@ -309,6 +320,9 @@ def run_configure(config_file):
 
 				val = raw_input(prompt + ": ")
 				if val != "":
+					if type(getattr(cfg, option[0])) is bool:
+						# Turn 'Yes' into True, everything else into False
+						val = val.lower().startswith('y')
 					setattr(cfg, option[0], val)
 			output("\nNew settings:")
 			for option in options:
