@@ -1,3 +1,7 @@
+2007-08-13  Michal Ludvig  <michal@logix.cz>
+
+	* s3cmd, S3/Config.py, S3/S3.py: HTTPS support
+
 2007-07-20  Michal Ludvig  <michal@logix.cz>
 
 	* setup.py: Check correct Python version and ElementTree availability.
